# only-whitespace-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  release.sh
only_whitespace_hook/: default_commit_message.py  honest_commit_message.py  util.py
src/only_whitespace_hook/: default_commit_message.py  honest_commit_message.py  util.py
tests/: conftest.py  test_default_commit_message.py  test_git_util.py  test_honest_commit_message.py
