[project]
name = "only-whitespace-hook"
version = "0.1.0"
description = "A commit to change whitespace should change ONLY whitespace"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
default-commit-message = "only_whitespace_hook.default_commit_message:main"
honest-commit-message = "only_whitespace_hook.honest_commit_message:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["."]
addopts = "--import-mode=importlib --cov"

[tool.coverage.paths]
source = ["only_whitespace_hook"]
tests = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
format = "text"
fail_under = 95
show_missing = true

exclude_also = [
    "if __name__ == .__main__.:",
]


[tool.pytest-watcher]
now = true
clear = true
notify_on_failure = false
delay = 0.7
runner = "uv"
runner_args = ["run", "pytest"]
patterns = ["*.py"]
