[project]
name = "only-whitespace-hook"
version = "0.2.0"
description = "A commit to change whitespace should change ONLY whitespace"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
default-commit-message = "only_whitespace_hook.default_commit_message:main"
honest-commit-message = "only_whitespace_hook.honest_commit_message:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build >= 0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["src"]
addopts = "--import-mode=importlib --cov"

[tool.coverage.paths]
source = ["only_whitespace_hook"]
tests = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
format = "text"
fail_under = 95.0
show_missing = true

exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
warn_return_any = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true

mypy_path = "src/:."
packages = ["only_whitespace_hook", "tests"]
exclude_gitignore = true

[tool.pytest-watcher]
now = true
clear = true
notify_on_failure = false
delay = 0.7
runner = "uv"
runner_args = ["run", "pytest"]
patterns = ["*.py"]
